# group3

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  config.json  flake.nix  shell.nix
.github/workflows/: build-client.yml  build.yml  docs.yml  github-project-issue.yml  lint.yml  test.yml
assets/sounds/client_sfx/: victory_dm.flac  victory_players.flac
assets/sounds/server_sfx/: start_game_dm.flac
dependencies/assimp/: CMakeLists.txt
dependencies/boost/: CMakeLists.txt
dependencies/freetype/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/src/: glad.c
dependencies/glew/: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
dependencies/google-test/: CMakeLists.txt  CMakeLists.txt.in
dependencies/imgui/: CMakeLists.txt
dependencies/json/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
dependencies/stb/: CMakeLists.txt
include/client/: animation.hpp  animationmanager.hpp  audiomanager.hpp  bone.hpp  camera.hpp  client.hpp  clientgamestate.hpp  clientinfo.hpp  constants.hpp  core.hpp  cube.hpp  lightsource.hpp  lobbyfinder.hpp  minimap.hpp  model.hpp  renderable.hpp  shader.hpp  sound.hpp  util.hpp
include/client/audio/: audiomanager.hpp
include/client/gui/: element.hpp  font.hpp  gui.hpp  widget.hpp  widgettype.hpp  window.hpp
include/debugger/: Debugger.hpp  debugger.hpp
include/server/: lobbybroadcaster.hpp  server.hpp  session.hpp
include/server/audio/: soundtable.hpp
include/server/game/: arrowtrap.hpp  boxcollider.hpp  collider.hpp  constants.hpp  creature.hpp  dungeonmaster.hpp  enemy.hpp  exit.hpp  fakewall.hpp  fireballtrap.hpp  floorspike.hpp  grid.hpp  gridcell.hpp  introcutscene.hpp  item.hpp  lava.hpp  mazegenerator.hpp  minotaur.hpp  mirror.hpp  object.hpp  objectmanager.hpp  orb.hpp  player.hpp  potion.hpp  projectile.hpp  python.hpp  servergamestate.hpp  slime.hpp  solidsurface.hpp  spawner.hpp  spell.hpp  spherecollider.hpp  spiketrap.hpp  teleportertrap.hpp  torchlight.hpp  trap.hpp  weapon.hpp  weaponcollider.hpp
include/shared/audio/: constants.hpp  soundcommand.hpp  soundsource.hpp  soundtable.hpp  soundtype.hpp  utilities.hpp
include/shared/game/: celltype.hpp  constants.hpp  dir_light.hpp  event.hpp  gamestate.hpp  point_light.hpp  servergamestate.hpp  sharedgamestate.hpp  sharedmodel.hpp  sharedobject.hpp  stat.hpp  status.hpp
include/shared/network/: constants.hpp  gamesocket.hpp  packet.hpp  session.hpp  socket.hpp
include/shared/utilities/: config.hpp  constants.hpp  custom_hash.hpp  light.hpp  rng.hpp  test.hpp  (+9 more)
maps/: default_maze.maze  maze1.maze  maze4.maze  maze5.maze  room.maze  tyler_test.maze  tylers_hellhole.maze
maps/cutscene/: intro.maze
maps/demo/: 1717736322059.maze  1717736328207.maze  1717736331254.maze  1717736332102.maze  1717736332741.maze  1717736334625.maze  1717736336652.maze  1717736337459.maze  1717736338134.maze  1717736338869.maze  1717736339610.maze  1717736340299.maze  1717736340991.maze  1717736341736.maze  1717736342386.maze  1717736343728.maze  1717736344950.maze  1717736345637.maze  candidate1.maze  candidate2.maze  candidate3.maze  candidate5.maze  candidate7.maze  game1_player_pov.maze  game2_zeus_pov.maze  notes.txt
maps/rooms/: README.md
maps/test/: anim_test.maze  arrow_wall.maze  big.maze  big_maze.maze  hallway.maze  itemRoom.maze  light_distance.maze  maze2.maze  maze3.maze  maze4.maze  maze6.maze  mirrorRoom.maze  orb_drop.maze  room.maze  teleporter.maze  tylers_hellhole.maze
src/client/: CMakeLists.txt  animation.cpp  animationmanager.cpp  audio.cpp  audiomanager.cpp  bone.cpp  camera.cpp  client.cpp  clientinfo.cpp  cube.cpp  lightsource.cpp  lobbyfinder.cpp  main.cpp  minimap.cpp  model.cpp  renderable.cpp  shader.cpp  shaders.cpp  sound.cpp  util.cpp
src/client/audio/: audiomanager.cpp
src/client/gui/: CMakeLists.txt  font.cpp  gui.cpp
src/client/gui/font/: font.cpp  loader.cpp
src/client/gui/imgs/: img.cpp  loader.cpp  logo.cpp
src/client/gui/widget/: centertext.cpp  dyntext.cpp  empty.cpp  flexbox.cpp  staticimg.cpp  textinput.cpp  widget.cpp
src/client/shaders/: cube.frag  cube.vert  deferred_geometry.frag  deferred_geometry.vert  deferred_light_box.frag  deferred_light_box.vert  deferred_lighting.frag  deferred_lighting.vert  dm_cube.frag  dm_deferred_lighting.frag  img.frag  img.vert  lightsource.vert  material.frag  model.frag  model.vert  shader.frag  shader.vert  solidsurface.frag  solidsurface.vert  text.frag  text.vert  wall.frag
src/client/tests/: CMakeLists.txt  bbox.cpp  hello_client_test.cpp
src/debugger/: CMakeLists.txt  Debugger.cpp  debugger.cpp  main.cpp
src/server/: CMakeLists.txt  lobbybroadcaster.cpp  main.cpp  server.cpp  session.cpp
src/server/audio/: soundtable.cpp
src/server/game/: arrowtrap.cpp  boxcollider.cpp  collider.cpp  creature.cpp  dungeonmaster.cpp  enemy.cpp  exit.cpp  fakewall.cpp  fireballtrap.cpp  floorspike.cpp  grid.cpp  gridcell.cpp  introcutscene.cpp  item.cpp  lava.cpp  mazegenerator.cpp  minotaur.cpp  mirror.cpp  object.cpp  objectmanager.cpp  orb.cpp  player.cpp  potion.cpp  projectile.cpp  python.cpp  servergamestate.cpp  slime.cpp  solidsurface.cpp  spawner.cpp  spell.cpp  spherecollider.cpp  spiketrap.cpp  teleportertrap.cpp  torchlight.cpp  trap.cpp  weapon.cpp  weaponcollider.cpp
src/server/tests/: CMakeLists.txt  hello_server_test.cpp
src/shared/: CMakeLists.txt
src/shared/audio/: soundsource.cpp  soundtable.cpp  soundtype.cpp  utilities.cpp
src/shared/game/: event.cpp  gamestate.cpp  servergamestate.cpp  sharedgamestate.cpp  sharedobject.cpp  status.cpp
src/shared/game/GameLogic/: BoxCollider.cpp  CollisionBoundary.cpp  Object.cpp  SphereCollider.cpp
src/shared/game/gamelogic/: boxcollider.cpp  creature.cpp  object.cpp  spherecollider.cpp
src/shared/network/: gamesocket.cpp  packet.cpp  session.cpp  socket.cpp
src/shared/tests/: CMakeLists.txt  hello_shared_test.cpp  serialize_test.cpp
src/shared/utilities/: config.cpp  rng.cpp  root_path.cpp  smartvector.cpp  test.cpp  time.cpp  vector3.cpp
(+109 files in other folders)
